fix handle button getting cut off

--- a/src/styles/HistogramSlider.scss
+++ b/src/styles/HistogramSlider.scss
@@ -1,6 +1,5 @@
 .histogram-slider-container {
-  overflow: hidden;
-  height: 100px;
+  height: 40px;
 
   .histogram-container {
     height: calc(100% - 17px);
